fix:remove horizontal scroll on resize, remove scroll on page when mobile menu is opened

--- a/src/scss/base/base.scss
+++ b/src/scss/base/base.scss
@@ -4,6 +4,10 @@ html {
 
 body {
   margin: 0;
+
+  &.hidden-scroll {
+    overflow: hidden;
+  }
 }
 
 html,
