--- a/src/scss/components/burger-btn.scss
+++ b/src/scss/components/burger-btn.scss
@@ -17,9 +17,6 @@ $burger-btn-color: #fff;
 
   @include media('<tablet') {
     display: block;
-    position: fixed;
-    top: 8px;
-    right: 12px;
   }
 
   &__line,
