--- a/src/scss/components/main-nav.scss
+++ b/src/scss/components/main-nav.scss
@@ -13,12 +13,11 @@
     align-self: flex-start;
     transform: translateX(-150%);
     width: 100%;
-    min-height: calc(100vh - 82px);
+    height: 100vh;
+    overflow: auto;
     position: fixed;
     top: 0;
     right: 0;
-    bottom: 0;
-    left: 0;
     background-color: $nav-bg-color;
     z-index: 2;
 
@@ -32,20 +31,24 @@
 
     display: flex;
     flex-wrap: wrap;
-    margin: 0 -12px;
 
     @include media ('<tablet') {
       flex-direction: column;
+      padding: 76px 0 16px;
       overflow: hidden;
-      padding: 16px 0;
     }
   }
 
   &__item {
-    margin: 0 12px;
+    &:not(:last-child) {
+      margin: 0 24px 0 0;
+    }
 
     @include media ('<tablet') {
-      margin: 0 0;
+      &:not(:last-child) {
+        margin: 0 0;
+      }
+
       border-bottom: 1px solid $links-border-color;
     }
   }
@@ -66,8 +69,8 @@
 
     @include media ('<tablet') {
      text-align: center;
-      width: 100%;
-      padding: 16px 10px;
+     width: 100%;
+     padding: 24px 10px;
     }
   }
 }
