--- a/src/scss/sections/our-story.scss
+++ b/src/scss/sections/our-story.scss
@@ -3,6 +3,7 @@
   $text-color: rgba(65, 61, 75, 0.75);
 
   padding: 50px 0;
+  overflow: hidden;
 
   @include media ('<phone') {
     padding: 20px 0;
